dev/afj-test-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: afj-test-deployment
  namespace: afj-test-app
  labels:
    app: afj-test
spec:
  selector:
    matchLabels:
      app: afj-test
  replicas: 1
  # strategy:
  # type: RollingUpdate
  template:
    metadata:
      labels:
        app: afj-test
    spec:
      containers:
        - name: docker-build
          image: "ghcr.io/veridid/dummy_app:sha-0094c37"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
