dev/afj-test-service.yml
apiVersion: v1
kind: Service          
metadata:
  name: afj-test-service
  namespace: afj-test-app
  labels:
    afj-test
spec:
  type: ClusterIP
  selector:
    app: afj-test
  ports:
    - name: svc-port
      protocol: TCP
      port: 3000
      targetPort: 3000
